Fix the overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
 	font-family: system-ui, sans-serif;
 	font-size: 1.6rem;
 	margin: 0;
-	overflow: hidden;
 }
 button {
 	border: none;
@@ -26,6 +25,7 @@ button {
 .app {
 	height: 100vh;
 	width: 100vw;
+	overflow: hidden;
 	display: grid;
 	grid-template-columns: 2.5rem repeat(10, 1fr) 2.5rem;
 	grid-template-rows: 2.5rem repeat(6, 1fr) 2.5rem;
@@ -181,6 +181,7 @@ button {
 .loader {
 	border-top: 0.6rem solid var(--color-download);
 	border-radius: 50%;
+	background: none;
 	height: 10rem;
 	width: 10rem;
 	animation: spin 0.8s linear infinite;
